--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "migrate:prod": "sequelize db:migrate --env production",
     "migrate": "NODE_PATH=./src node migrate.js",
     "start:dev": "NODE_PATH=./src cross-env NODE_ENV=development nodemon",
-    "lint:fix": "standard --fix"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts}' --fix"
   },
   "repository": {
     "type": "git",
@@ -43,7 +43,6 @@
     "@types/jest": "^24.0.21",
     "@types/knex": "^0.16.1",
     "@types/node": "^12.12.3",
-    "backend-tslint-rules": "^1.14.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -67,9 +66,6 @@
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "tsc-watch": "^4.0.0",
-    "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.6.4",
     "uuidv4": "^5.0.1"
   },
@@ -88,8 +84,13 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "lint-staged": "^10.0.0-1",
     "npm-check": "^5.9.0",
     "pre-commit": "^1.2.2",
