--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc && npm run lint",
     "db:create:dev": "cross-env NODE_ENV=development node scripts/db/create",
     "db:create:test": "cross-env NODE_ENV=test node scripts/db/create",
     "db:delete:dev": "cross-env NODE_ENV=development node scripts/db/delete",
