--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "migrate:prod": "sequelize db:migrate --env production",
     "migrate": "NODE_PATH=./src node migrate.js",
     "start:dev": "NODE_PATH=./src cross-env NODE_ENV=development nodemon",
-    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts}' --fix"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts}' --fix",
+    "test": "jest --forceExit",
+    "test:dev": "jest --watchAll",
+    "testWithCoverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -52,6 +55,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
+    "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.1",
     "morgan": "^1.9.1",
@@ -84,6 +88,7 @@
     ]
   },
   "devDependencies": {
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "commitizen": "^4.0.3",
@@ -95,6 +100,7 @@
     "npm-check": "^5.9.0",
     "pre-commit": "^1.2.2",
     "semantic-release": "^15.13.28",
+    "supertest": "^4.0.2",
     "travis-deploy-once": "^5.0.11"
   },
   "engines": {
