build: fixed travis deploy bug

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start:dev": "NODE_PATH=./src cross-env NODE_ENV=development nodemon",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts}' --fix",
     "lint:staged": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once",
+    "travis-deploy-once": "travis-deploy-once --pro",
     "semantic-release": "semantic-release",
     "test": "jest --forceExit",
     "test:dev": "jest --watchAll",
