--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "testWithCoverage": "jest --coverage"
   },
   "lint-staged": {
-    "*.ts": "lint"
+    "*.ts": "npm run lint"
   },
   "pre-commit": "lint:staged",
   "repository": {
